--- a/frontEnd/src/components/SignUp.css
+++ b/frontEnd/src/components/SignUp.css
@@ -1,28 +1,46 @@
 .pad1 {
- padding-right: 19px;
+  padding-right: 19px;
 }
 
 .pad2 {
- padding-right: 23px;
+  padding-right: 23px;
 }
 
 .pad3 {
- padding-right: 12px;
+  padding-right: 12px;
 }
 
 .pad4 {
- padding-right: 11px;
+  padding-right: 11px;
 }
 
 .pad5 {
- padding-right: 57px;
+  padding-right: 57px;
 }
 
 .pad6 {
- padding-right: 47px;
+  padding-right: 47px;
 }
 
 .margin2 {
- margin-top: 5vh;
- margin-left: 5vw;
+  margin-top: 5vh;
+  margin-left: 5vw;
+}
+
+.style1 {
+ border-radius: 5px !important;
+ background-color: #266dd3 !important;
+ color: white !important;
+ border: 1px solid #0dcaf0 !important;
+ padding-top: 3px !important;
+ padding-bottom: 3px !important;
+ width: 75px !important;
+}
+
+.newTweetStyle {
+ border-radius: 5px;
+ border: 1px solid black;
+ width: 300px;
+ padding-top: 8px;
+ padding-left: 8px;
 }
